--- a/index.html
+++ b/index.html
@@ -3,32 +3,35 @@
 <head>
   <title>Lights Out</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/lights-out.js"></script>
+  <script src="js/jquery.js"></script>
 </head>
 <body>
   <div class="row">
-    <div class="light" id="0-0" onclick="lightClick(0, 0)"></div>
-    <div class="light" id="0-1" onclick="lightClick(0, 1)"></div>
-    <div class="light" id="0-2" onclick="lightClick(0, 2)"></div>
-    <div class="light" id="0-3" onclick="lightClick(0, 3)"></div>
+    <div class="light" id="light-0-0" onclick="lightClick(0, 0)"></div>
+    <div class="light" id="light-0-1" onclick="lightClick(0, 1)"></div>
+    <div class="light" id="light-0-2" onclick="lightClick(0, 2)"></div>
+    <div class="light" id="light-0-3" onclick="lightClick(0, 3)"></div>
   </div>
   <div class="row">
-    <div class="light" id="1-0" onclick="lightClick(1, 0)"></div>
-    <div class="light" id="1-1" onclick="lightClick(1, 1)"></div>
-    <div class="light" id="1-2" onclick="lightClick(1, 2)"></div>
-    <div class="light" id="1-3" onclick="lightClick(1, 3)"></div>
+    <div class="light" id="light-1-0" onclick="lightClick(1, 0)"></div>
+    <div class="light" id="light-1-1" onclick="lightClick(1, 1)"></div>
+    <div class="light" id="light-1-2" onclick="lightClick(1, 2)"></div>
+    <div class="light" id="light-1-3" onclick="lightClick(1, 3)"></div>
   </div>
   <div class="row">
-    <div class="light" id="2-0" onclick="lightClick(2, 0)"></div>
-    <div class="light" id="2-1" onclick="lightClick(2, 1)"></div>
-    <div class="light" id="2-2" onclick="lightClick(2, 2)"></div>
-    <div class="light" id="2-3" onclick="lightClick(2, 3)"></div>
+    <div class="light" id="light-2-0" onclick="lightClick(2, 0)"></div>
+    <div class="light" id="light-2-1" onclick="lightClick(2, 1)"></div>
+    <div class="light" id="light-2-2" onclick="lightClick(2, 2)"></div>
+    <div class="light" id="light-2-3" onclick="lightClick(2, 3)"></div>
   </div>
   <div class="row">
-    <div class="light" id="3-0" onclick="lightClick(3, 0)"></div>
-    <div class="light" id="3-1" onclick="lightClick(3, 1)"></div>
-    <div class="light" id="3-2" onclick="lightClick(3, 2)"></div>
-    <div class="light" id="3-3" onclick="lightClick(3, 3)"></div>
+    <div class="light" id="light-3-0" onclick="lightClick(3, 0)"></div>
+    <div class="light" id="light-3-1" onclick="lightClick(3, 1)"></div>
+    <div class="light" id="light-3-2" onclick="lightClick(3, 2)"></div>
+    <div class="light" id="light-3-3" onclick="lightClick(3, 3)"></div>
   </div>
 </body>
+
+  <script src="js/lights-out.js"></script>
+
 </html>
