perhaps final cut

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
     <div class="light" id="light-3-2" onclick="lightClick(3, 2)"></div>
     <div class="light" id="light-3-3" onclick="lightClick(3, 3)"></div>
   </div>
+
+  <div class="row">
+    <button id="showHideButton" onclick="showHideSolution()">Show solution</button>
+  </div>
+
 </body>
+
+
 
   <script src="js/lights-out.js"></script>
 
