Testing gh-pages update

--- a/lecture01/example04.html
+++ b/lecture01/example04.html
@@ -6,7 +6,7 @@
   <body>
     <ul>
       <li><i>This text is italicized</i></li>
-      <li><b>This text is bolded</b></li>
+      <li><b>This text is bolded.</b></li>
     </ul>
   </body>
 </html>
